Respect startDragTime in zoom handling

BUG: 295006
FIXED-IN: 4.14.2